--- a/src/index.njk
+++ b/src/index.njk
@@ -3,20 +3,33 @@ layout: default.njk
 title: Tek Radars
 ---
 
-<h1>Technology Radars</h1>
-<div class="radars-list">
-    {% for category in collections.categories %}
-    <div class="radar-category">
-        <h2>{{ category }}</h2>
-        <ul class="radar-list">
-            {% for radar in collections.radars %}
-                {% if radar.category === category %}
-                    <li>
-                        <a href="/radars/{{ radar.category}}/{{ radar.date }}">{{ radar.date }}</a>
-                    </li>
-                {% endif %}
-            {% endfor %}
-        </ul>
+<header>
+    <div class="header">
+        <img src="/images/logo.svg" />
     </div>
-    {% endfor %}
+</header>
+
+<div class="container">
+    <div class="title-container">
+        <p class="tagline">Tech-Radar</p>
+        <h1>See what's on our Radar</h1>
+    </div>
+
+    <div class="radars-list">
+        {% for category in collections.categories %}
+            <div class="radar-category">
+                <h2>{{ category }}</h2>
+                <hr class="solid">
+                <ul class="radar-list">
+                    {% for radar in collections.radars %}
+                        {% if radar.category === category %}
+                            <li class="radar-item">
+                                <a href="/radars/{{ radar.category}}/{{ radar.date }}">{{ radar.date }}</a>
+                            </li>
+                        {% endif %}
+                    {% endfor %}
+                </ul>
+            </div>
+        {% endfor %}
+    </div>
 </div>
