--- a/src/index.njk
+++ b/src/index.njk
@@ -3,15 +3,11 @@ layout: default.njk
 title: Tek Radars
 ---
 
-<header>
-    <div class="header">
-        <img src="/images/logo.svg" />
-    </div>
-</header>
+{% include 'header.njk' %}
 
 <div class="container">
     <div class="title-container">
-        <p class="tagline">Tech-Radar</p>
+        <p class="tagline">Tech-radar</p>
         <h1>See what's on our Radar</h1>
     </div>
 
@@ -21,12 +17,10 @@ title: Tek Radars
                 <h2>{{ category }}</h2>
                 <hr class="solid">
                 <ul class="radar-list">
-                    {% for radar in collections.radars %}
-                        {% if radar.category === category %}
-                            <li class="radar-item">
-                                <a href="/radars/{{ radar.category}}/{{ radar.date }}">{{ radar.date }}</a>
-                            </li>
-                        {% endif %}
+                    {% for radar in collections.radars | filter("category", category) %}
+                        <li class="radar-item">
+                            <a href="/radars/{{ radar.category}}/{{ radar.date }}">{{ radar.date }}</a>
+                        </li>
                     {% endfor %}
                 </ul>
             </div>
